--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -1,3 +1,30 @@
+@font-face {
+    font-family:"PokemonSolid";
+    src: url("/fonts/PokemonSolid.ttf") format("truetype");
+}
+
+@font-face {
+    font-family:"PokemonHollow";
+    src: url("/fonts/PokemonHollow.ttf") format("truetype");
+}
+
+.welcome h1{
+font-size: 30px;
+font-family: 'PokemonSolid', sans-serif;
+}
+
+.close{
+    position:fixed;
+    right:10px;
+    top:5px;
+    text-align: right;
+    font-size: 14px;
+    font-weight: 600;
+    color: #0c0c0c;
+    cursor: pointer;
+    font-family: 'PokemonSolid', sans-serif;
+}
+
 .row {
     display: grid;
     grid-template-columns: repeat( auto-fit, minmax(33.33%, 1fr) );
